@@ -127,6 +127,20 @@ https://bigsnarf.wordpress.com/2015/05/31/creating-kinesis-stream-in-pictures/
 
 ####Step 4: Get and compile Spark with Kinesis Support
 See blog
+
+On my Macbook I had to specify the maven memory requirements in my Terminal:
+
+```bash
+host> export MAVEN_OPTS="-Xmx2g -XX:MaxPermSize=512M -XX:ReservedCodeCacheSize=512m"
+```
+
+Then I was able to issue the maven build command to compile Spark to get data from Kinesis:
+```bash
+host>   mvn -Pkinesis-asl -DskipTests clean package
+```
+
+https://spark.apache.org/docs/1.1.0/building-with-maven.html
+
 https://bigsnarf.wordpress.com/2015/05/31/compile-apache-spark-with-kinesis-support/
 https://spark.apache.org/docs/latest/streaming-kinesis-integration.html
 
